--- a/Duckbot/Duckbot.csproj
+++ b/Duckbot/Duckbot.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DSharpPlus" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
