--- a/Duckbot/Duckbot.csproj
+++ b/Duckbot/Duckbot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="3.1.2" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.1.2" />
   </ItemGroup>
 
 </Project>
